RESOLVED FIXED131360
[WinCairo] Compile error in TextureMapper.h
https://bugs.webkit.org/show_bug.cgi?id=131360
Summary [WinCairo] Compile error in TextureMapper.h
peavo
Reported 2014-04-08 08:26:52 PDT
I'm getting this compile error, when compiling WinCairo: "error C2259: 'WebCore::TextureMapper' : cannot instantiate abstract class" The TextureMapper class has pure virtual methods, and cannot be instantiated.
Attachments
Patch (1.27 KB, patch)
2014-04-08 08:32 PDT, peavo
no flags
peavo
Comment 1 2014-04-08 08:32:33 PDT
Brent Fulgham
Comment 2 2014-04-08 08:59:15 PDT
This looks fine, but I'll wait for the EFL EWS bot to run before approving.
Brent Fulgham
Comment 3 2014-04-08 09:08:45 PDT
Caused by Bug 131276.
Brent Fulgham
Comment 4 2014-04-08 09:10:40 PDT
Comment on attachment 228839 [details] Patch r=me. Let's keep an eye on EFL to make sure nothing breaks there. GTK already looks good.
peavo
Comment 5 2014-04-08 09:16:46 PDT
(In reply to comment #4) > (From update of attachment 228839 [details]) > r=me. Let's keep an eye on EFL to make sure nothing breaks there. GTK already looks good. Thanks :)
WebKit Commit Bot
Comment 6 2014-04-08 09:40:30 PDT
Comment on attachment 228839 [details] Patch Clearing flags on attachment: 228839 Committed r166931: <http://trac.webkit.org/changeset/166931>
WebKit Commit Bot
Comment 7 2014-04-08 09:40:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.