[WinCairo] Compile error in TextureMapper.h https://bugs.webkit.org/show_bug.cgi?id=131360

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-04-08
Reviewed by Brent Fulgham.

The TextureMapper class has pure virtual methods, and cannot be instantiated.

* platform/graphics/texmap/TextureMapper.h:
(WebCore::TextureMapper::platformCreateAccelerated):

Canonical link: https://commits.webkit.org/149416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166931 268f45cc-cd09-0410-ab3c-d52691b4dbfc